Revert quotes change

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,18 +2,18 @@ name: CI
 on:
   push:
     paths-ignore:
-      - "examples/**"
-      - "HelpSource/**"
-      - "sounds/**"
-      - "*.md"
+      - 'examples/**'
+      - 'HelpSource/**'
+      - 'sounds/**'
+      - '*.md'
   pull_request:
     paths-ignore:
-      - "examples/**"
-      - "HelpSource/**"
-      - "sounds/**"
-      - "*.md"
+      - 'examples/**'
+      - 'HelpSource/**'
+      - 'sounds/**'
+      - '*.md'
   schedule:
-    - cron: "0 0 * * 0" # run weekly to refresh cache
+    - cron: '0 0 * * 0' # run weekly to refresh cache
 
 jobs:
   lint:
@@ -31,10 +31,10 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - uses: pre-commit/action@v3.0.0
-        name: "Run pre-commit"
+        name: 'Run pre-commit'
         env:
           FULL_CHECK: 1
 
@@ -104,27 +104,27 @@ jobs:
         include:
           - artifact-suffix: macOS-universal
             s3-os-name: osx
-            s3-artifact-suffx: ""
-            s3-artifact-extension: "dmg"
-            artifact-extension: ".dmg" # for download-artifacts action, for non-zip only, should include `.`
+            s3-artifact-suffx: ''
+            s3-artifact-extension: 'dmg'
+            artifact-extension: '.dmg' # for download-artifacts action, for non-zip only, should include `.`
             s3-create-latest-link: true # create link to pointing to the "latest" build; activate only one per branch per s3-os-name
 
           - artifact-suffix: win32
             s3-os-name: win32
-            s3-artifact-suffx: ""
-            s3-artifact-extension: "zip"
+            s3-artifact-suffx: ''
+            s3-artifact-extension: 'zip'
             s3-create-latest-link: true # create link to pointing to the "latest" build
 
           - artifact-suffix: win64
             s3-os-name: win64
-            s3-artifact-suffx: ""
-            s3-artifact-extension: "zip"
+            s3-artifact-suffx: ''
+            s3-artifact-extension: 'zip'
             s3-create-latest-link: true # create link to pointing to the "latest" build
 
     if: github.repository_owner == 'supercollider' && github.event_name != 'pull_request' # run in the main repo, but not on pull requests
     needs: [lint, version-getter, build-macos, build-windows]
     runs-on: ubuntu-latest
-    name: "deploy ${{ matrix.artifact-suffix }} to s3"
+    name: 'deploy ${{ matrix.artifact-suffix }} to s3'
     env:
       INSTALL_PATH: ${{ github.workspace }}/build/Install
       ARTIFACT_FILE: SuperCollider-${{ needs.version-getter.outputs.sc-version }}-${{ matrix.artifact-suffix }}${{ matrix.artifact-extension }}
@@ -133,7 +133,7 @@ jobs:
       S3_ARTIFACT_PATH: ${{ github.workspace }}/build/s3-upload
       S3_ARTIFACT_NAME: SC-${{ github.sha }}${{ matrix.s3-artifact-suffx }}.${{ matrix.s3-artifact-extension }}
       S3_BUILD_LOCATION: builds/supercollider/supercollider/${{ matrix.s3-os-name }}
-      S3_ROOT_URL: "https://supercollider.s3.amazonaws.com"
+      S3_ROOT_URL: 'https://supercollider.s3.amazonaws.com'
     steps:
       - name: download artifacts
         uses: actions/download-artifact@v4
@@ -181,7 +181,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
           AWS_S3_BUCKET: supercollider
           AWS_S3_ENDPOINT: https://s3-us-west-2.amazonaws.com
-          AWS_REGION: "us-west-2"
+          AWS_REGION: 'us-west-2'
           SOURCE_DIR: ${{ env.S3_ARTIFACT_PATH }}
           DEST_DIR: ${{ env.S3_BUILD_LOCATION }}
       - name: post S3 build location
@@ -197,10 +197,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/') # run on tagged commits
     needs: [lint, version-getter, build-macos, build-windows]
     runs-on: ubuntu-latest
-    name: "deploy release"
+    name: 'deploy release'
     env:
       INSTALL_PATH: ${{ github.workspace }}/Install
-      ARTIFACT_FILE_PREFIX: "SuperCollider-${{ needs.version-getter.outputs.sc-version }}"
+      ARTIFACT_FILE_PREFIX: 'SuperCollider-${{ needs.version-getter.outputs.sc-version }}'
     steps:
       - name: download artifacts
         uses: actions/download-artifact@v4
