--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -7,10 +7,14 @@ if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/nova-simd/vec.hpp)
 endif()
 
 add_subdirectory(libgit)
-set_property(TARGET libgit2 PROPERTY BUILD_FUZZERS OFF)
-set_property(TARGET libgit2 PROPERTY BUILD_EXAMPLES OFF)
-set_property(TARGET libgit2 PROPERTY BUILD_CLI OFF)
-set_property(TARGET libgit2 PROPERTY BUILD_SHARED_LIBS OFF)
+set_property(DIRECTORY libgit PROPERTY BUILD_FUZZERS OFF)
+set_property(DIRECTORY libgit PROPERTY BUILD_EXAMPLES OFF)
+set_property(DIRECTORY libgit PROPERTY BUILD_CLI OFF)
+set_property(DIRECTORY libgit PROPERTY BUILD_SHARED_LIBS OFF)
+set(LIBGIT2_DEPENDENCY_OBJECTS ${LIBGIT2_DEPENDENCY_OBJECTS} PARENT_SCOPE)
+set(LIBGIT2_SYSTEM_LIBS ${LIBGIT2_SYSTEM_LIBS} PARENT_SCOPE)
+set(LIBGIT2_INCLUDES ${LIBGIT2_INCLUDES} PARENT_SCOPE)
+
 
 if(NOT SYSTEM_PORTAUDIO)
     message(STATUS "PortAudio: building static library")
