--- a/external_libraries/CMakeLists.txt
+++ b/external_libraries/CMakeLists.txt
@@ -12,6 +12,7 @@ set_property(DIRECTORY libgit PROPERTY BUILD_EXAMPLES OFF)
 set_property(DIRECTORY libgit PROPERTY BUILD_CLI OFF)
 set_property(DIRECTORY libgit PROPERTY BUILD_SHARED_LIBS OFF)
 set(LIBGIT2_DEPENDENCY_OBJECTS ${LIBGIT2_DEPENDENCY_OBJECTS} PARENT_SCOPE)
+set(LIBGIT2_DEPENDENCY_INCLUDES ${LIBGIT2_DEPENDENCY_INCLUDES} PARENT_SCOPE)
 set(LIBGIT2_SYSTEM_LIBS ${LIBGIT2_SYSTEM_LIBS} PARENT_SCOPE)
 set(LIBGIT2_INCLUDES ${LIBGIT2_INCLUDES} PARENT_SCOPE)
 
