--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,8 @@ __pycache__
 .*.sw?
 
 # vs code files
-.vscode/settings.json
+.vscode/*
+!.vscode/tasks.json
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/c_cpp_properties.json
