--- a/platform/linux/CMakeLists.txt
+++ b/platform/linux/CMakeLists.txt
@@ -9,3 +9,6 @@ install(FILES ../../icons/sc_ide.svg
 
 install(FILES supercollider.xml
     DESTINATION share/mime/packages )
+
+install(FILES io.github.supercollider.SuperCollider.metainfo.xml
+    DESTINATION share/metainfo )
