--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -14,50 +14,50 @@ jobs:
       matrix:
         include:
 
-          - job-name: "jammy gcc9"
+          - job-name: ""
             os-version: "22.04"
             c-compiler: "gcc-9"
             cxx-compiler: "g++-9"
             use-syslibs: false
             shared-libscsynth: false
 
-          - job-name: "jammy gcc11"
+          - job-name: ""
             os-version: "22.04"
             c-compiler: "gcc-11"
             cxx-compiler: "g++-11"
             use-syslibs: false
             shared-libscsynth: false
 
-          - job-name: "jammy gcc12"
+          - job-name: ""
             os-version: "22.04"
             c-compiler: "gcc-12"
             cxx-compiler: "g++-12"
             use-syslibs: false
             shared-libscsynth: false
-            artifact-suffix: "linux-jammy-gcc12" # will trigger artifact upload; after changing this update the test-linux artifact-file in actions.yml
+            artifact-suffix: "ubuntu-22.04-gcc12" # will trigger artifact upload; after changing this update the test-linux artifact-file in actions.yml
 
-          - job-name: "noble gcc13 use system libraries"
+          - job-name: "use system libraries"
             os-version: "24.04"
             c-compiler: "gcc-13"
             cxx-compiler: "g++-13"
             use-syslibs: true
             shared-libscsynth: false
 
-          - job-name: "noble gcc14 shared libscsynth"
+          - job-name: "shared libscsynth"
             os-version: "24.04"
             c-compiler: "gcc-14"
             cxx-compiler: "g++-14"
             use-syslibs: false
             shared-libscsynth: true
             
-          - job-name: "jammy clang11"
+          - job-name: ""
             os-version: "22.04"
             c-compiler: "clang-11"
             cxx-compiler: "clang++-11"
             use-syslibs: false
             shared-libscsynth: false
 
-          - job-name: "noble clang15"
+          - job-name: ""
             os-version: "24.04"
             c-compiler: "clang-15"
             cxx-compiler: "clang++-15"
@@ -65,28 +65,28 @@ jobs:
             shared-libscsynth: false
 
             # clang 16-18 disabled due to incompatible boost code - re-enable after updating bundled boost > ~1.80
-          # - job-name: "noble clang16"
+          # - job-name: ""
           #   os-version: "24.04"
           #   c-compiler: "clang-16"
           #   cxx-compiler: "clang++-16"
           #   use-syslibs: false
           #   shared-libscsynth: false
 
-          # - job-name: "noble clang17"
+          # - job-name: ""
           #   os-version: "24.04"
           #   c-compiler: "clang-17"
           #   cxx-compiler: "clang++-17"
           #   use-syslibs: false
           #   shared-libscsynth: false
 
-          # - job-name: "noble clang18"
+          # - job-name: ""
           #   os-version: "24.04"
           #   c-compiler: "clang-18"
           #   cxx-compiler: "clang++-18"
           #   use-syslibs: false
           #   shared-libscsynth: false
 
-    name: Linux ${{ matrix.job-name }}
+    name: Ubuntu ${{ matrix.os-version }} ${{ matrix.c-compiler }} ${{ matrix.job-name }}
     env:
       BUILD_PATH: ${{ github.workspace }}/build
       INSTALL_PATH: ${{ github.workspace }}/build/Install
