--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -16,7 +16,9 @@ jobs:
           - job-name: "universal"
             os-version: "12"
             xcode-version: "13.4.1"
-            deployment-target: "10.15"
+            qt-version: '6.7.2' # will use qt from aqtinstall
+            qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning qt5compat'
+            deployment-target: "12"
             cmake-architectures: "x86_64;arm64"
             use-syslibs: false
             shared-libscsynth: false
@@ -25,12 +27,13 @@ jobs:
             build-readline: false
             build-fftw: false
             artifact-suffix: "macOS-universal"
-            verify-app: true
+            verify-app: false # verify_app doesn't work properly with qt's rpaths
 
           - job-name: "x64 legacy"
             os-version: "12"
             xcode-version: "13.4.1"
             qt-version: "5.15.2" # will use qt from aqtinstall
+            qt-modules: 'qtwebengine'
             deployment-target: "10.15"
             cmake-architectures: x86_64
             use-syslibs: false
@@ -44,20 +47,20 @@ jobs:
           - job-name: "x64 use system libraries"
             os-version: "12"
             xcode-version: "13.4.1"
-            deployment-target: "10.15"
+            deployment-target: ""
             cmake-architectures: x86_64
             use-syslibs: true
             shared-libscsynth: false
-            verify-app: true
+            verify-app: false # verify app also doesn't work with homebrew's qt6
 
           - job-name: "x64 shared libscsynth"
             os-version: "12"
             xcode-version: "13.4.1"
-            deployment-target: "10.15"
+            deployment-target: ""
             cmake-architectures: x86_64
             use-syslibs: false
             shared-libscsynth: true
-            verify-app: true
+            verify-app: false # verify app also doesn't work with homebrew's qt6
 
     name: macOS ${{ matrix.job-name }}
     env:
@@ -166,11 +169,11 @@ jobs:
 
       - name: install qt from homebrew
         if: matrix.cmake-architectures == 'x86_64' && !matrix.qt-version
-        run: brew install qt@5
+        run: brew install qt@6
 
       - name: install qt universal binary from homebrew
         if: matrix.cmake-architectures != 'x86_64' && !matrix.qt-version
-        run: ./brew-install-universal.sh qt@5
+        run: ./brew-install-universal.sh qt@6
 
       - name: install qt using aqtinstall
         uses: jurplel/install-qt-action@v3
@@ -178,7 +181,7 @@ jobs:
         env:
           DEVELOPER_DIR: "" # remove developer dir which causes installation to fail
         with:
-          modules: "qtwebengine"
+          modules: ${{ matrix.qt-modules }}
           version: ${{ matrix.qt-version }}
           cache: true
           cache-key-prefix: ${{ runner.os }}-v1-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-qt${{ matrix.qt-version }}
@@ -192,8 +195,6 @@ jobs:
           if $USE_SYSLIBS; then EXTRA_CMAKE_FLAGS="-DSYSTEM_BOOST=ON -DSYSTEM_YAMLCPP=ON $EXTRA_CMAKE_FLAGS"; fi
 
           if $SHARED_LIBSCSYNTH; then EXTRA_CMAKE_FLAGS="-DLIBSCSYNTH=ON $EXTRA_CMAKE_FLAGS"; fi
-
-          if [[ -z "${{ matrix.qt-version }}" ]]; then EXTRA_CMAKE_FLAGS="-DCMAKE_PREFIX_PATH=`brew --prefix qt@5` $EXTRA_CMAKE_FLAGS"; fi
 
           if [[ "${{ matrix.verify-app }}" == "true" ]]; then EXTRA_CMAKE_FLAGS="-DSC_VERIFY_APP=ON $EXTRA_CMAKE_FLAGS"; fi
 
