--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -34,7 +34,7 @@ jobs:
             fftw-arch: "x64"
             cmake-arch: "x64"
             os-version: "2019"
-            qt-version: "5.15.2"
+            qt-version: "6.7.2"
             qt-arch: "win64_msvc2019_64"
             fftw-url: "ftp://ftp.fftw.org/pub/fftw/fftw-3.3.5-dll64.zip"
             cmake-generator: "Visual Studio 16 2019"
@@ -42,7 +42,7 @@ jobs:
             vcvars-script: "vcvars64.bat"
             vcpkg-triplet: x64-windows-release
             use-qtwebengine: "ON" # might need to be turned off for MinGW
-            qt-modules: "qtwebengine"
+            qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning qt5compat'
             artifact-suffix: "win64" # set if needed - will trigger artifact upload
             create-installer: ${{ startsWith(github.ref, 'refs/tags/') }}
             installer-suffix: "win64-installer"
@@ -50,13 +50,13 @@ jobs:
           - job-name: "64-bit MinGW"
             fftw-arch: "x64"
             os-version: "2022"
-            qt-version: "5.15.2"
-            qt-arch: "win64_mingw81"
+            qt-version: "6.7.0"
+            qt-arch: "win64_mingw"
             fftw-url: "ftp://ftp.fftw.org/pub/fftw/fftw-3.3.5-dll64.zip"
             cmake-generator: "MinGW Makefiles"
             chocolatey-options: "" # '--forcex86' for 32-bit build
             use-qtwebengine: "OFF" # might need to be turned off for MinGW
-            qt-modules: ""
+            qt-modules: "qtpositioning qt5compat"
             artifact-suffix: "win64-mingw" # set if needed - will trigger artifact upload
 
     name: Windows ${{ matrix.job-name }}
@@ -151,12 +151,11 @@ jobs:
       - name: configure
         shell: bash
         run: |
-          export PATH=$Qt5_DIR/bin:$PATH
           export VCPKG_ROOT=$VCPKG_INSTALLATION_ROOT
 
           mkdir $BUILD_PATH && cd $BUILD_PATH
 
-          cmake -G "${{ matrix.cmake-generator }}" -A "${{ matrix.cmake-arch }}" -D CMAKE_PREFIX_PATH="$Qt5_DIR" -D SUPERNOVA=ON -D SC_USE_QTWEBENGINE=${{ matrix.use-qtwebengine }} -D CMAKE_BUILD_TYPE=Release -DVCPKG_TARGET_TRIPLET="${{ matrix.vcpkg-triplet }}" .. # build type is specified here for MinGW build and for vcpkg
+          cmake -G "${{ matrix.cmake-generator }}" -A "${{ matrix.cmake-arch }}" -D SUPERNOVA=ON -D SC_USE_QTWEBENGINE=${{ matrix.use-qtwebengine }} -D CMAKE_BUILD_TYPE=Release -DVCPKG_TARGET_TRIPLET="${{ matrix.vcpkg-triplet }}" .. # build type is specified here for MinGW build and for vcpkg
 
       - name: build
         shell: bash
