--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -94,7 +94,7 @@ jobs:
           restore-keys: ${{ runner.os }}-${{ matrix.os-version }}-${{ matrix.xcode-version }}-${{ matrix.deployment-target }}-${{ matrix.use-syslibs }}-${{ matrix.shared-libscsynth }}-${{ matrix.qt-version }}-${{ matrix.cmake-architectures }}-
 
       - name: cleanup homebrew downloads # always remove existing downloads first, as we bring back relevant downloads from cache
-        run: rm -rf $(brew --cache)
+        run: rm -rf $(brew --cache)/downloads
 
       - name: cache homebrew downloads
         uses: actions/cache@v4
