CMake: remove qt5compat

--- a/QtCollider/CMakeLists.txt
+++ b/QtCollider/CMakeLists.txt
@@ -31,12 +31,8 @@ if(SC_USE_QTWEBENGINE)
   list(APPEND QT_COLLIDER_LIBS Qt::WebEngineCore Qt::WebEngineWidgets)
 endif()
 
-if (${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    list(APPEND QT_COMPONENTS Core5Compat)
-    list(APPEND QT_COLLIDER_LIBS Qt::Core5Compat)
-    if(UNIX AND SC_USE_QTWEBENGINE)
-        list(APPEND QT_COLLIDER_LIBS Qt::DBus)
-    endif()
+if (${QT_VERSION_MAJOR} GREATER_EQUAL 6 AND UNIX AND SC_USE_QTWEBENGINE)
+    list(APPEND QT_COLLIDER_LIBS Qt::DBus)
 endif()
 
 find_package(Qt${QT_VERSION_MAJOR} ${REQUIRED_QT_VERSION} COMPONENTS ${QT_COMPONENTS} REQUIRED)
