--- a/editors/sc-ide/CMakeLists.txt
+++ b/editors/sc-ide/CMakeLists.txt
@@ -26,12 +26,8 @@ if(SC_USE_QTWEBENGINE)
     )
 endif()
 
-if (${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    list(APPEND QT_IDE_COMPONENTS Core5Compat)
-    list(APPEND QT_IDE_LIBRARIES Qt::Core5Compat)
-    if(UNIX AND SC_USE_QTWEBENGINE)
-        list(APPEND QT_IDE_LIBRARIES Qt::DBus)
-    endif()
+if (${QT_VERSION_MAJOR} GREATER_EQUAL 6 AND UNIX AND SC_USE_QTWEBENGINE)
+    list(APPEND QT_IDE_LIBRARIES Qt::DBus)
 endif()
 
 find_package(Qt${QT_VERSION_MAJOR} ${REQUIRED_QT_VERSION} COMPONENTS ${QT_IDE_COMPONENTS} REQUIRED)
