--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -40,7 +40,7 @@ jobs:
             vcvars-script-path: "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
             vcpkg-triplet: x64-windows-release
             use-qtwebengine: "ON" # might need to be turned off for MinGW
-            qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning qt5compat'
+            qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning'
             artifact-suffix: "win64" # set if needed - will trigger artifact upload
             create-installer: ${{ startsWith(github.ref, 'refs/tags/') }}
             installer-suffix: "win64-installer"
@@ -56,7 +56,7 @@ jobs:
             vcvars-script-path: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
             vcpkg-triplet: x64-windows-release
             use-qtwebengine: "ON" # might need to be turned off for MinGW
-            qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning qt5compat'
+            qt-modules: 'qtwebengine qtwebchannel qtwebsockets qtpositioning'
 
           - job-name: "64-bit MinGW"
             fftw-arch: "x64"
@@ -67,7 +67,7 @@ jobs:
             cmake-generator: "MinGW Makefiles"
             chocolatey-options: "" # '--forcex86' for 32-bit build
             use-qtwebengine: "OFF" # might need to be turned off for MinGW
-            qt-modules: "qtpositioning qt5compat"
+            qt-modules: "qtpositioning"
             artifact-suffix: "win64-mingw" # set if needed - will trigger artifact upload
 
     name: Windows ${{ matrix.job-name }}
