--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,6 +13,10 @@ on:
       - 'sounds/**'
       - '*.md'
 
+env:
+  # number of jobs to split each test suite into
+  NCLUMPS: 5
+
 jobs:
   lint:
     runs-on: ubuntu-22.04
@@ -40,8 +44,15 @@ jobs:
     runs-on: ubuntu-22.04
     outputs:
       sc-version: ${{ steps.set-version.outputs.version }}
+      n-clumps: ${{ steps.set-test-clumps.outputs.n-clumps }}
+      test-clumps-matrix: ${{ steps.set-test-clumps.outputs.test-clumps-matrix }}
 
     steps:
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: testsuite/scripts/setup_test_clumps_output.sh
+          sparse-checkout-cone-mode: false
+
       - name: set version string for artifacts
         id: set-version
         run: |
@@ -52,7 +63,9 @@ jobs:
             SC_VERSION=$GITHUB_SHA
           fi
           echo "version=$SC_VERSION" >> $GITHUB_OUTPUT
-
+      - name: set test clumps
+        id: set-test-clumps
+        run: ./testsuite/scripts/setup_test_clumps_output.sh
   build-linux:
     needs: [lint, version-getter]
     uses: ./.github/workflows/build_linux.yml
@@ -79,6 +92,8 @@ jobs:
     uses: ./.github/workflows/test_linux.yml
     with:
       artifact-file: "SuperCollider-${{ needs.version-getter.outputs.sc-version }}-ubuntu-22.04-gcc12"
+      test-clumps-matrix: ${{ needs.version-getter.outputs.test-clumps-matrix }}
+      n-clumps: ${{ needs.version-getter.outputs.n-clumps }}
     secrets: inherit
 
   test-macos:
@@ -86,6 +101,8 @@ jobs:
     uses: ./.github/workflows/test_macos.yml
     with:
       artifact-file: "SuperCollider-${{ needs.version-getter.outputs.sc-version }}-macOS-x64.dmg"
+      test-clumps-matrix: ${{ needs.version-getter.outputs.test-clumps-matrix }}
+      n-clumps: ${{ needs.version-getter.outputs.n-clumps }}
     secrets: inherit
 
   # test-windows:
@@ -93,6 +110,8 @@ jobs:
   #   uses: ./.github/workflows/test_windows.yml
   #   with:
   #     artifact-file: "SuperCollider-${{ needs.version-getter.outputs.sc-version }}-win64"
+  #     test-clumps-matrix: ${{ needs.version-getter.outputs.test-clumps-matrix }}
+  #     n-clumps: ${{ needs.version-getter.outputs.n-clumps }}
   #   secrets: inherit
 
   deploy_s3:
