--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -5,10 +5,20 @@ on:
       artifact-file:
         required: true
         type: string
+      test-clumps-matrix:
+        required: true
+        type: string
+      n-clumps:
+        required: true
+        type: string
 
 jobs:
   test-windows:
     runs-on: windows-2022
+    strategy:
+      fail-fast: false
+      matrix:
+        this-clump: ${{ fromJSON(inputs.test-clumps-matrix) }}
     env:
       INSTALL_PATH: ${{ github.workspace }}/build/Install
       ARTIFACT_FILE: ${{ inputs.artifact-file }}
@@ -61,7 +71,7 @@ jobs:
           # add path
           $SCLANG $SCRIPT_ADD_PATH $TESTS_PATH
           # run tests
-          timeout 1200 $SCLANG $SCRIPT_RUN_TESTS $TEST_LIST_PROTO $TEST_LIST_RESULT
+          timeout 1200 $SCLANG $SCRIPT_RUN_TESTS $TEST_LIST_PROTO $TEST_LIST_RESULT ${{ matrix.this-clump }} ${{ inputs.n-clumps }}
 
       - name: Post test results
         shell: bash
