--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -5,9 +5,6 @@ on:
       artifact-file:
         required: true
         type: string
-      test-config:
-        required: true
-        type: string
 
 jobs:
   test-windows:
@@ -15,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        this-clump: ${{ fromJSON(inputs.test-config).clumps-matrix }}
+        test-clump: [0,1,2,3,4]
     env:
       INSTALL_PATH: ${{ github.workspace }}/build/Install
       ARTIFACT_FILE: ${{ inputs.artifact-file }}
@@ -68,7 +65,7 @@ jobs:
           # add path
           $SCLANG $SCRIPT_ADD_PATH $TESTS_PATH
           # run tests
-          timeout 1200 $SCLANG $SCRIPT_RUN_TESTS $TEST_LIST_PROTO $TEST_LIST_RESULT ${{ matrix.this-clump }} ${{ fromJSON(inputs.test-config).n-clumps }}
+          timeout 1200 $SCLANG $SCRIPT_RUN_TESTS $TEST_LIST_PROTO $TEST_LIST_RESULT ${{ strategy.job-index }} ${{ strategy.job-total }}
 
       - name: Post test results
         shell: bash
